--- a/package.json
+++ b/package.json
@@ -2,12 +2,27 @@
   "name": "movie-theater-sdk",
   "version": "1.0.0",
   "description": "SDK for mobile theater app and web",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "tsc",
+    "test": "jest"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "react-redux": "^9.1.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
