--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
+    "jest-module-name-mapper": "^0.1.5",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0"
